# husky-sql

./: .gitignore  CMakeLists.txt  README.md  gitignore
calcite/: CMakeLists.txt
calcite/output/: plan.json
calcite/src/main/java/husky/sql/calcite/: HuskyQueryPlanToJson.java
calcite/src/main/java/husky/sql/calcite/plan/nodes/logical/: HuskyLogicalAggregate.java  HuskyLogicalJoin.java  HuskyLogicalSort.java  HuskyLogicalTableScan.java
calcite/src/main/java/husky/sql/calcite/plan/nodes/logical/converter/: HuskyLogicalAggregateConverter.java  HuskyLogicalJoinConverter.java  HuskyLogicalSortConverter.java
calcite/src/main/java/husky/sql/calcite/plan/rules/: HuskyRuleSets.java
calcite/src/main/java/husky/sql/calcite/plan/rules/logical/: PushFilterIntoTableScanRule.java  PushProjectIntoTableScanRule.java
calcite/src/main/java/husky/sql/calcite/plan/util/: InputRefRegister.java  RexProgramRewriter.java
calcite/src/main/java/husky/sql/calcite/planner/: HuskyQueryPlanToJson.java  HuskyQueryPlanner.java
calcite/src/main/java/husky/sql/calcite/table/: SimpleTestTable.java
calcite/src/main/resources/: table_lineitem.json
cmake/: dep.cmake
example/: CMakeLists.txt  execute_simple_sql.cpp
husky-plugins/: CMakeLists.txt
husky-sql/: CMakeLists.txt  execute.cpp
husky-sql/relnode/: abstract_rel_node.hpp  husky_logical_aggregate.cpp  husky_logical_aggregate.hpp  husky_logical_calc.cpp  husky_logical_calc.hpp  husky_logical_join.cpp  husky_logical_join.hpp  husky_logical_sort.cpp  husky_logical_sort.hpp  husky_logical_table_scan.cpp  husky_logical_table_scan.hpp
husky-sql/rexnode/: aggregate_call.cpp  aggregate_call.hpp  aggregate_combiner.cpp  aggregate_combiner.hpp  condition.cpp  condition.hpp  dummy_combiner.hpp  group_aggregators.hpp  rex_node.cpp  rex_node.hpp
husky-sql/rexnode/aggregators/: abstract_aggregator.hpp  avg_aggregators.hpp  count_aggregators.hpp  min_aggregators.hpp  sum_aggregators.hpp
husky-sql/table/: abstract_table_reader.hpp  orc_table_reader.hpp  row.hpp  table.hpp  table_reader_factory.hpp  text_table_reader.hpp
husky-sql/utils/: json_parser.cpp  json_parser.hpp  row_kv.hpp  save_to_hdfs.cpp  save_to_hdfs.hpp
